[gd_scene load_steps=8 format=3 uid="uid://uieckdtouw1t"]

[ext_resource type="Script" path="res://Entities/Cup/Cup.gd" id="1_4rkuo"]
[ext_resource type="Texture2D" uid="uid://cy67x8ljpoj0e" path="res://Images/cup.png" id="2_fkv2d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i4iak"]
size = Vector2(20.75, 99.9998)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uipd4"]
size = Vector2(17.7459, 88.0152)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8r8g0"]
size = Vector2(72, 107.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fpenu"]
size = Vector2(87, 119)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a06xb"]
size = Vector2(62, 104)

[node name="Cup" type="RigidBody2D" groups=["cup", "grabbable"]]
collision_layer = 7
collision_mask = 7
script = ExtResource("1_4rkuo")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_left = -20.0
offset_top = -26.0
offset_right = 20.0
offset_bottom = 24.0
color = Color(1, 1, 1, 0.372549)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-33.375, -13)
shape = SubResource("RectangleShape2D_i4iak")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(33.75, -13.0001)
shape = SubResource("RectangleShape2D_i4iak")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2(0.00347805, 43.123)
rotation = 1.57476
shape = SubResource("RectangleShape2D_uipd4")

[node name="GrabArea" type="Area2D" parent="." groups=["grabbable"]]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabArea"]
position = Vector2(0, -9.25)
shape = SubResource("RectangleShape2D_8r8g0")

[node name="Cup" type="Sprite2D" parent="."]
position = Vector2(0, -11)
scale = Vector2(4, 4)
texture = ExtResource("2_fkv2d")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[node name="AreaSFXs" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaSFXs"]
position = Vector2(0.5, -8.5)
shape = SubResource("RectangleShape2D_fpenu")

[node name="WaterFillingCollider" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WaterFillingCollider"]
position = Vector2(0, -11)
shape = SubResource("RectangleShape2D_a06xb")
debug_color = Color(0.803922, 0, 0.85098, 0.419608)

[node name="WaterFillingPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="body_entered" from="AreaSFXs" to="." method="_on_area_sf_xs_body_entered"]
[connection signal="body_shape_entered" from="WaterFillingCollider" to="." method="_on_water_filling_collider_body_shape_entered"]
[connection signal="body_shape_exited" from="WaterFillingCollider" to="." method="_on_water_filling_collider_body_shape_exited"]
